--- a/configure.in
+++ b/configure.in
@@ -3,15 +3,13 @@
 
 AC_PREREQ([2.69])
 AC_INIT([Hackers SHell], [0.01], [davekdos@gmail.com], [hsh])
-AC_CONFIG_SRCDIR([main.c])
+AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
 AC_PROG_CC
 
 # Checks for libraries.
-# FIXME: Replace `main' with a function in `-lncurses':
-AC_CHECK_LIB([ncurses], [main])
 
 # Checks for header files.
 AC_CHECK_HEADERS([limits.h stdlib.h string.h])
@@ -21,5 +19,6 @@ AC_CHECK_HEADERS([limits.h stdlib.h string.h])
 # Checks for library functions.
 AC_CHECK_FUNCS([memset])
 
+AC_CONFIG_SUBDIRS([lib/lcurses-0.1])
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
